fixed quick search page, wrap some components in one single div

--- a/src/components/SearchByLocation/search-by-location.scss
+++ b/src/components/SearchByLocation/search-by-location.scss
@@ -5,9 +5,9 @@
 }
 
 .search-by-location-section {
-  margin: 0rem 0rem 0rem -1rem;
+  margin: 0rem;
   padding: 0rem 0rem 1.75rem 2.25rem;
-  background-color: $light-grey-2;
+  background-color: $white;
   .location-search-header {
     margin-top: 1.25rem;
     margin-bottom: 0.5rem;
